force-app/main/default/objects/Call_Recording__c/Call_Recording__c.object-meta.xml
<CustomObject>
    <label>Call Recording</label>
    <nameField>
        <displayFormat>CALL-{0000}</displayFormat>
        <label>Call Recording Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Recordings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>