force-app/main/default/objects/Call_Recording__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Call Recordings</relationshipLabel>
    <relationshipName>Call_Recordings</relationshipName>
    <type>Lookup</type>
</CustomField>