force-app/main/default/objects/Call_Recording__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <label>Agent</label>
    <length>175</length>
    <type>Text</type>
</CustomField>