force-app/main/default/objects/Call_Recording__c/fields/Call_Source__c.field-meta.xml
<CustomField>
    <fullName>Call_Source__c</fullName>
    <label>Call Source</label>
    <length>175</length>
    <type>Text</type>
</CustomField>