force-app/main/default/objects/Call_Recording__c/fields/Recording_Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Recording_Match_Key__c</fullName>
    <externalId>true</externalId>
    <label>Recording_Match_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>